# gcode-parser-core

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
examples/: example.gcode
examples/cpp/: gcode_parser_core.h  main.cpp
examples/python/: main.py
src/: lib.rs  parser.rs
